--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </div>
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow" id="header1-3" style="background-image: url(assets/images/bakery5-2000x1312.png);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Generator</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow" id="header1-3" style="background-image: url(assets/images/bakery6-2000x1312.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.2; background-color: rgb(0, 0, 0);"></div>
 
